<?php

namespace Modules\Setup\Entities;

use Illuminate\Database\Eloquent\Model;
use Modules\INTShipping\Entities\Continent;
use Spatie\Translatable\HasTranslations;

class Country extends Model
{
    use HasTranslations;


    protected $table = 'countries';

    public $translatable = ['name'];
    protected $fillable = [
        'name',
        'code',
        'phonecode',
        'flag',
        'status',
        'is_default',
    ];
    protected $casts  = [
        "id" => "integer",
        "code" => "string",
        "name" => "string",
        "phonecode" => "string",
        "flag" => "string",
        "status" => "integer",
        "is_default" => "boolean",
    ];

    public function continent(){
        return $this->belongsTo(Continent::class,'continent_id','id');
    }
    public function states(){
        return $this->hasMany(State::class,'country_id','id')->orderBy('name');
    }

    public function cities(){
        return $this->hasManyThrough(City::class, State::class);
    }

    public function scopeActive($query)
    {
        return $query->where('status', 1);
    }

    public function isLastActive(): bool
    {
        return (int) $this->status === 1
            && static::query()->where('status', 1)->count() === 1;
    }

    public function isDefault(): bool
    {
        return (bool) $this->is_default;
    }
}
